# streetpass_cooldown_reset

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  LICENSE.txt  README.rst
resource/: banner.kra  gen.sh  template.rsf
src/: cecd.c  cecd.h  main.c
